# keri-kore-app

./: Cargo.toml  bakcup  package.json  tauri.conf.json
src/: db.rs  lib.rs
src-tauri/: Cargo.toml
src-tauri/src/: did.rs  keri.rs  lib.rs  main.rs  paths.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/certificates/: +page.svelte
src/routes/profile/: +page.svelte
