[package]
name = "keri-kore-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keri_kore_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keri-core = "0.17.2"
cesrox = "0.1.6"
tauri-plugin-fs = "2"
ssi-dids = "0.2.1"
# ... your existing dependencies ...
# Pin base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"
iref = "3.2.2"
static-iref = "3.0.0"
